--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   
   
   <title>portfolio</title>
-  <script type="module" crossorigin src="/assets/index.22d7ed79.js"></script>
+  <script type="module" crossorigin src="/assets/index.f9014b54.js"></script>
   <link rel="modulepreload" href="/assets/vendor.2cff7981.js">
-  <link rel="stylesheet" href="/assets/index.10125770.css">
+  <link rel="stylesheet" href="/assets/index.5ebaca51.css">
 </head>
 <body>
   <div class="intro-main-container">
@@ -134,7 +134,7 @@
   <div class="my-works">
     <div class="work-container">
       <div class="my-works-h1">
-        <h1 >My Works</h1>
+        <h1>My Works</h1>
       </div>
     </div>
     <div class="work-container">
@@ -656,9 +656,9 @@
 </div>
 
       <p class="about-me-text">
-        I'm Prateek from Bengaluru, India. I'm still a student but having learnt programming and web development I can get things done pretty quick and efficiently.
-        My main niche lies in web development currently but I'm open to learn new technologies as needed. Js and Ts are my main languages but I also work with other languages like
-        Go, Rust, C, C++ etc for fun (and for some handy cli tools, I love cli tools by the way). I'm also pretty good in data structures and algorithms to some extent.
+        I'm Prateek from India. I'm a college student but having learnt programming and web development through internet resources I can get some quality work done pretty quick and efficiently.
+        My main niche lies in web development currently but I'm open to learn new technologies as needed. JS and TS are my main languages but I also work with other languages like
+        Go, Rust, C, C++ etc for fun (and for some handy cli tools). I'm also pretty good in data structures and algorithms to some extent.
       </p>
     </section>
 
@@ -751,8 +751,17 @@
     </section>
 
     <footer>
-      <div class="github-img"><img src="/assets/github.093afb2c.png"></div>
-      <a href="https://github.com/syncMutex">@syncMutex</a>
+      <div class="icons-container">
+        <div class="icon">
+          <a href="https://github.com/syncMutex" target="_blank"><img src="/assets/github.6526aec0.svg" alt="github"></a>
+        </div>
+        <div class="icon">
+          <a href="mailto:prateekbm005@gmail.com" target="_blank"><img src="/assets/gmail.3141cca7.svg" alt="gmail"></a>
+        </div>
+      </div>
+      <div class="mail-id">
+        mail: prateekbm005@gmail.com
+      </div>
     </footer>
 
   </div>
