--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   
   
   
-  <title>portfolio</title>
-  <script type="module" crossorigin src="/assets/index.50cccf70.js"></script>
+  <title>syncMutex</title>
+  <script type="module" crossorigin src="/assets/index.459f42c2.js"></script>
   <link rel="modulepreload" href="/assets/vendor.2cff7981.js">
   <link rel="stylesheet" href="/assets/index.5ebaca51.css">
 </head>
@@ -175,9 +175,9 @@
                   </div>
                 </div>
                 <div class="description">
-                  <a href="https://scrumjs.herokuapp.com/" target="_blank">Scrum</a>
+                  <a href="https://scrum.onrender.com/" target="_blank">Scrum</a>
                   <p>Fully functional Scrum based, <b>google login</b>, group project managment system built with react.</p>
-                  <a href="https://scrumjs.herokuapp.com/" target="_blank" class="visit-btn">visit</a>
+                  <a href="https://scrum.onrender.com/" target="_blank" class="visit-btn">visit</a>
                 </div>
                 <div class="what-i-learnt-icon tooltip">
                   <span class="tooltiptext">what I learnt</span>
@@ -216,9 +216,9 @@
                   </div>
                 </div>
                 <div class="description">
-                  <a href="https://gliss-js.herokuapp.com/" target="_blank">Gliss</a>
+                  <a href="https://glissjs.onrender.com/" target="_blank">Gliss</a>
                   <p>Create presentations in the browser and host it for realtime presentation online (<b>also with group voice chat support</b>)</p>
-                  <a href="https://gliss-js.herokuapp.com/" target="_blank" class="visit-btn">visit</a>
+                  <a href="https://glissjs.onrender.com/" target="_blank" class="visit-btn">visit</a>
                 </div>
                 <div class="what-i-learnt-icon tooltip">
                   <span class="tooltiptext">what I learnt</span>
@@ -260,9 +260,9 @@
                   </div>
                 </div>
                 <div class="description">
-                  <a href="https://sendcss.herokuapp.com/" target="_blank">send.css</a>
+                  <a href="https://sendcss.onrender.com/" target="_blank">send.css</a>
                   <p>The only chat app where you can inject css to make fancy text stylings using <b>css</b>.</p>
-                  <a href="https://sendcss.herokuapp.com/" target="_blank" class="visit-btn">visit</a>
+                  <a href="https://sendcss.onrender.com/" target="_blank" class="visit-btn">visit</a>
                 </div>
                 <div class="what-i-learnt-icon tooltip">
                   <span class="tooltiptext">what I learnt</span>
@@ -302,9 +302,9 @@
                   </div>
                 </div>
                 <div class="description">
-                  <a href="https://othellojs.herokuapp.com/" target="_blank">othello</a>
+                  <a href="https://othellojs.onrender.com/" target="_blank">othello</a>
                   <p>Realtime othello games online, using websockets in golang.</p>
-                  <a href="https://othellojs.herokuapp.com/" target="_blank" class="visit-btn">visit</a>
+                  <a href="https://othellojs.onrender.com/" target="_blank" class="visit-btn">visit</a>
                 </div>
                 <div class="what-i-learnt-icon tooltip">
                   <span class="tooltiptext">what I learnt</span>
@@ -392,7 +392,7 @@
                 <h3>What I learnt</h3>
                 <div class="list-item">TCP conn</div>
                 <div class="list-item">Improved Golang skills</div>
-                <div class="list-item">Custom protocols using gob encoding</div>
+                <div class="list-item">gob encoding</div>
                 <div class="back">Back</div>
               </div>
               <div class="work-content">
